--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,44 @@
+:root {
+  --heading-font: "Playfair Display", serif;
+  --paragraph-font: "Poppins", sans-serif;
+}
+
 body {
-  background: yellow;
+  font-family: var(--paragraph-font);
 }
-
 h1 {
-  font-family: "Playfair Display", serif;
+  font-family: var(--heading-font);
   font-weight: bold;
+  font-size: 96px;
 }
 
-p {
-  font-family: "Poppins", sans-serif;
+h2 {
+  font-family: var(--paragraph-font);
+  font-weight: bold;
+  font-size: 36px;
+  color: #272142;
+}
+
+.hero {
+  text-align: center;
+  background-color: #f9f7fe;
+  padding: 200px 20px;
+}
+
+.hero p {
+  font-family: var(--paragraph-font);
+  font-weight: 400;
+  font-size: 24px;
+  color: #272142;
+  margin-top: 30px;
+}
+
+.btn-branding {
+  background: #6c63ff;
+  border-radius: 4px;
+  color: white;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 18px 46px;
 }
