--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,8 @@
 :root {
   --heading-font: "Playfair Display", serif;
   --paragraph-font: "Poppins", sans-serif;
+  --primary-color: #6c63ff;
+  --secondary-color: #f9f7fe;
 }
 
 body {
@@ -26,6 +28,12 @@ h3 {
   color: #272142;
 }
 
+h4 {
+  font-family: var(--heading-font);
+  font-size: 48px;
+  font-weight: 700;
+}
+
 p {
   font-size: 16px;
   line-height: 30px;
@@ -45,7 +53,7 @@ p {
 
 .hero {
   text-align: center;
-  background-color: #f9f7fe;
+  background-color: var(--secondary-color);
   padding: 140px 20px;
 }
 
@@ -58,7 +66,7 @@ p {
 }
 
 .btn-branding {
-  background: #6c63ff;
+  background: var(--primary-color);
   border-radius: 4px;
   color: white;
   font-weight: normal;
@@ -69,7 +77,7 @@ p {
 }
 
 .btn-branding:hover {
-  background: #6c63ff;
+  background: var(--primary-color);
   border-radius: 4px;
   color: black;
 }
@@ -80,19 +88,84 @@ p {
 }
 
 .project-button {
-  color: #6c63ff;
+  color: var(--primary-color);
   font-size: 16px;
   line-height: 24px;
   font-weight: 500;
-  border: 1px solid #6c63ff;
+  border: 1px solid var(--primary-color);
   padding: 18px 30px;
   transition: all 200ms ease-in-out;
   margin-top: 50px;
 }
 
 .project-button:hover {
-  border: 1px solid #6c63ff;
+  border: 1px solid var(--primary-color);
   color: black;
+}
+
+.work-inquiry {
+  background: var(--secondary-color);
+  max-width: 85%;
+  margin: 70px auto;
+  border-radius: 20px;
+  padding: 50px 80px 35px;
+  vertical-align: middle;
+}
+
+.bottom-paragraph p {
+  font-size: 18px;
+  font-weight: 400;
+  margin-top: 20px;
+}
+
+.inquiry-button-parent {
+  text-align: center;
+}
+
+.work-inquiry-button {
+  vertical-align: middle;
+}
+
+.email-parent {
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+.email {
+  text-decoration: none;
+  color: black;
+  font-size: 24px;
+  line-height: 36px;
+}
+
+.email:hover {
+  text-decoration: underline;
+  color: var(--primary-color);
+}
+
+.social-media-icons {
+  margin-bottom: 100px;
+  display: flex;
+  justify-content: center;
+}
+
+.facebook-icon,
+.twitter-icon,
+.instagram-icon {
+  background-color: var(--secondary-color);
+  padding: 15px;
+  border-radius: 50%;
+  color: var(--primary-color);
+  font-size: 20px;
+}
+
+.facebook-icon {
+  padding: 15px 19px;
+  margin-right: 30px;
+}
+
+.twitter-icon {
+  margin-right: 30px;
 }
 
 @media (max-width: 992px) {
@@ -147,5 +220,32 @@ p {
 
   .project-block {
     margin-top: 10px !important;
+  }
+
+  h4 {
+    font-size: 24px;
+  }
+
+  .work-inquiry {
+    margin: 30px auto;
+    border-radius: 10px;
+    padding: 30px 40px 10px;
+  }
+
+  .bottom-paragraph p {
+    font-size: 14px;
+    margin-top: 10px;
+    text-align: left;
+  }
+
+  .work-inquiry-button {
+    margin-top: 0 !important;
+  }
+
+  .email {
+    text-decoration: none;
+    color: black;
+    font-size: 18px;
+    line-height: 36px;
   }
 }
