--- a/src/style.css
+++ b/src/style.css
@@ -65,6 +65,42 @@ p {
   margin-top: 25px;
 }
 
+.about-page-hero {
+  margin: 100px 60px;
+}
+
+.about-page-content {
+  padding: 60px 0 40px 70px;
+}
+
+.about-page-content h1 {
+  font-size: 64px;
+}
+
+.about-page-content h2 {
+  font-size: 18px;
+  font-family: var(--paragraph-font);
+}
+
+.about-page-img img {
+  max-width: 64%;
+  display: block;
+  margin: 20px auto 10px;
+}
+
+.img-author-link {
+  display: block;
+  text-align: center;
+  text-decoration: none;
+  color: #a8a4f9;
+  font-size: 14px;
+}
+
+.img-author-link:hover {
+  text-decoration: underline;
+  color: #847ef7;
+}
+
 .btn-branding {
   background: var(--primary-color);
   border-radius: 4px;
@@ -183,6 +219,21 @@ p {
   .hero p {
     font-size: 18px;
     margin-top: 10px;
+  }
+
+  .about-page-hero {
+    margin-top: 60px 0 0 0;
+  }
+
+  .about-page-content {
+    text-align: center;
+    padding: 0 0 30px 0;
+  }
+
+  .about-page-img img {
+    max-width: 50%;
+    display: block;
+    margin: 0 auto;
   }
 
   .btn-branding {
