--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,7 @@
 body {
   font-family: var(--paragraph-font);
 }
+
 h1 {
   font-family: var(--heading-font);
   font-weight: bold;
@@ -228,6 +229,7 @@ p {
   .about-page-content {
     text-align: center;
     padding: 0 0 30px 0;
+    margin: 0;
   }
 
   .about-page-img img {
