--- a/src/style.css
+++ b/src/style.css
@@ -66,19 +66,19 @@ p {
   margin-top: 25px;
 }
 
-.about-page-hero {
+.content-container {
   margin: 100px 60px;
 }
 
-.about-page-content {
+.content {
   padding: 60px 0 40px 70px;
 }
 
-.about-page-content h1 {
+.content h1 {
   font-size: 64px;
 }
 
-.about-page-content h2 {
+.content h2 {
   font-size: 18px;
   font-family: var(--paragraph-font);
 }
@@ -222,14 +222,17 @@ p {
     margin-top: 10px;
   }
 
-  .about-page-hero {
+  .content-container {
     margin-top: 60px 0 0 0;
   }
 
-  .about-page-content {
+  .content {
     text-align: center;
     padding: 0 0 30px 0;
-    margin: 0;
+  }
+
+  .content h1 {
+    font-size: 42px;
   }
 
   .about-page-img img {
