--- a/src/style.css
+++ b/src/style.css
@@ -67,11 +67,11 @@ p {
 }
 
 .content-container {
-  margin: 100px 60px;
+  margin: 100px 10px;
 }
 
 .content {
-  padding: 60px 0 40px 70px;
+  padding: 50px 0 40px 0px;
 }
 
 .content h1 {
@@ -83,10 +83,14 @@ p {
   font-family: var(--paragraph-font);
 }
 
+.content h3 {
+  font-size: 24px;
+}
+
 .about-page-img img {
-  max-width: 64%;
+  max-width: 74%;
   display: block;
-  margin: 20px auto 10px;
+  margin: 10px auto;
 }
 
 .img-author-link {
@@ -236,7 +240,7 @@ p {
   }
 
   .about-page-img img {
-    max-width: 50%;
+    max-width: 85%;
     display: block;
     margin: 0 auto;
   }
