--- a/src/style.css
+++ b/src/style.css
@@ -196,6 +196,14 @@ p {
   border-radius: 50%;
   color: var(--primary-color);
   font-size: 20px;
+  transition: all 200ms ease-in-out;
+}
+
+.facebook-icon:hover,
+.twitter-icon:hover,
+.instagram-icon:hover {
+  background-color: var(--primary-color);
+  color: white;
 }
 
 .facebook-icon {
@@ -340,5 +348,13 @@ nav .logo {
   nav li {
     line-height: 45px;
     margin-left: 10px;
+  }
+
+  footer .email-parent {
+    margin-top: 30px;
+  }
+
+  footer .social-media-icons {
+    margin-bottom: 40px;
   }
 }
