--- a/src/style.css
+++ b/src/style.css
@@ -144,7 +144,7 @@ p {
   color: black;
 }
 
-.work-inquiry {
+footer .work-inquiry {
   background: var(--secondary-color);
   max-width: 85%;
   margin: 70px auto;
@@ -183,14 +183,13 @@ p {
 }
 
 .social-media-icons {
-  margin-bottom: 100px;
+  margin-bottom: 50px;
   display: flex;
   justify-content: center;
 }
 
 .facebook-icon,
-.twitter-icon,
-.instagram-icon {
+.github-icon {
   background-color: var(--secondary-color);
   padding: 15px;
   border-radius: 50%;
@@ -200,8 +199,7 @@ p {
 }
 
 .facebook-icon:hover,
-.twitter-icon:hover,
-.instagram-icon:hover {
+.github-icon:hover {
   background-color: var(--primary-color);
   color: white;
 }
@@ -215,6 +213,18 @@ p {
   margin-right: 30px;
 }
 
+footer .author {
+  text-align: center;
+}
+
+footer .author p {
+  font-size: 14px;
+}
+
+footer .author a {
+  color: var(--primary-color);
+  text-decoration: none;
+}
 nav {
   padding: 20px 50px 20px 30px;
   background-color: white;
@@ -345,8 +355,11 @@ nav .logo {
     line-height: 36px;
   }
 
+  nav {
+    padding: 5px 50px 5px 30px;
+  }
+
   nav li {
-    line-height: 45px;
     margin-left: 10px;
   }
 
@@ -356,5 +369,9 @@ nav .logo {
 
   footer .social-media-icons {
     margin-bottom: 40px;
+  }
+
+  footer .author p {
+    font-size: 10px;
   }
 }
